--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=InterviewBrushUpServer
 server.port=8081
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/interview_brush_up?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8&allowMultiQueries=true
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://121.40.63.147:3306/interview_brush_up?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8&allowMultiQueries=true
+spring.datasource.username=web
+spring.datasource.password=web0422
 mybatis.mapper-locations[0]=classpath*:mapper/**/*.xml
 spring.mail.host=smtp.qq.com
 spring.mail.protocol=smtp
