修改 pom.xml，增加插件

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.hnu</groupId>
-    <artifactId>InterviewBrushUpServer</artifactId>z
+    <artifactId>InterviewBrushUpServer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>InterviewBrushUpServer</name>
     <description>InterviewBrushUpServer</description>
