--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=InterviewBrushUpServer
 server.port=8081
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://121.40.63.147:3306/interview_brush_up?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8&allowMultiQueries=true
-spring.datasource.username=web
-spring.datasource.password=web0422
+#spring.datasource.url=jdbc:mysql://121.40.63.147:3306/interview_brush_up?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/interview_brush_up?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8&allowMultiQueries=true
+#spring.datasource.username=web
+spring.datasource.username=root
+#spring.datasource.password=web0422
+spring.datasource.password=5213
 mybatis.mapper-locations[0]=classpath*:mapper/**/*.xml
 spring.mail.host=smtp.qq.com
 spring.mail.protocol=smtp
@@ -15,3 +18,4 @@ spring.mail.test-connection=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+remote.base-url=https://api.weixin.qq.com
