小程序一键登录（未完成）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 remote.base-url=https://api.weixin.qq.com
+remote.appid=wx5915e37352a7f3e2
+remote.secret=7fa2e9a00f482ec30f635151ade5ceb5
