修改 pom.xml中的 pagehelper 版本 完成审核功能和部分分页查询功能 新增 pagebean类

--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,8 @@
         <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper-spring-boot-starter -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>6.1.0</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.7</version>
         </dependency>
 
         <!--访问其他服务端-->
