--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!--HuTool工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.25</version>
+        </dependency>
+
     </dependencies>
 
     <build>
