--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,14 @@ spring.mail.test-connection=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mvc.static-path-pattern=/**
+spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+spring.servlet.multipart.maxFileSize=-1
+spring.servlet.multipart.maxRequestSize=-1
+mybatis.configuration.mapUnderscoreToCamelCase=true
 remote.base-url=https://api.weixin.qq.com
 remote.appid=wx5915e37352a7f3e2
 remote.secret=7fa2e9a00f482ec30f635151ade5ceb5
+info.nickname-length=8
+info.default-avatar-url=http://localhost:8081/avatar/default.jpg
+info.avatar-base-url=http://localhost:8081/avatar/
