新增 添加关注、移除关注、关注列表、粉丝列表 发布文章、删除文章

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,4 @@ remote.secret=7fa2e9a00f482ec30f635151ade5ceb5
 info.nickname-length=8
 info.default-avatar-url=http://localhost:8081/avatar/default.jpg
 info.avatar-base-url=http://localhost:8081/avatar/
+info.image-base-url=http://localhost:8081/image/
