发布文章、删除文章、查看文章（主页、发现）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ info.nickname-length=8
 info.default-avatar-url=http://localhost:8081/avatar/default.jpg
 info.avatar-base-url=http://localhost:8081/avatar/
 info.image-base-url=http://localhost:8081/image/
+info.content-length=100
+info.recommend-count=100
