新增点赞记录

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.username=root
 #spring.datasource.password=web0422
 spring.datasource.password=5213
 mybatis.mapper-locations[0]=classpath*:mapper/**/*.xml
+mybatis.configuration.mapUnderscoreToCamelCase=true
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.mail.host=smtp.qq.com
 spring.mail.protocol=smtp
 spring.mail.default-encoding=UTF-8
@@ -22,7 +24,6 @@ spring.mvc.static-path-pattern=/**
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 spring.servlet.multipart.maxFileSize=-1
 spring.servlet.multipart.maxRequestSize=-1
-mybatis.configuration.mapUnderscoreToCamelCase=true
 remote.base-url=https://api.weixin.qq.com
 remote.appid=wx5915e37352a7f3e2
 remote.secret=7fa2e9a00f482ec30f635151ade5ceb5
