--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,32 +4,37 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://121.40.63.147:3306/interview_brush_up?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8&allowMultiQueries=true
 spring.datasource.url=jdbc:mysql://localhost:3306/interview_brush_up?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8&allowMultiQueries=true
-#spring.datasource.username=web
-spring.datasource.username=root
-#spring.datasource.password=web0422
-spring.datasource.password=5213
+spring.datasource.username=web
+#spring.datasource.username=root
+spring.datasource.password=web0422
+#spring.datasource.password=5213
 mybatis.mapper-locations[0]=classpath*:mapper/**/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-spring.mail.host=smtp.qq.com
-spring.mail.protocol=smtp
-spring.mail.default-encoding=UTF-8
-spring.mail.username=3501569434@qq.com
-spring.mail.password=nngelpyourrychei
-spring.mail.test-connection=true
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.host=smtp.qq.com
+#spring.mail.protocol=smtp
+#spring.mail.default-encoding=UTF-8
+#spring.mail.username=3501569434@qq.com
+#spring.mail.password=nngelpyourrychei
+#spring.mail.test-connection=true
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
 spring.mvc.static-path-pattern=/**
 spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 spring.servlet.multipart.maxFileSize=-1
 spring.servlet.multipart.maxRequestSize=-1
 remote.base-url=https://api.weixin.qq.com
-remote.appid=wx5915e37352a7f3e2
-remote.secret=7fa2e9a00f482ec30f635151ade5ceb5
+#remote.appid=wx5915e37352a7f3e2
+remote.appid=wx983731bad8aa390c
+#remote.secret=7fa2e9a00f482ec30f635151ade5ceb5
+remote.secret=0921200930186429b6eab10c5c3bdd19
 info.nickname-length=8
-info.default-avatar-url=http://localhost:8081/avatar/default.jpg
-info.avatar-base-url=http://localhost:8081/avatar/
-info.image-base-url=http://localhost:8081/image/
+#info.default-avatar-url=http://localhost:8081/avatar/default.jpg
+info.default-avatar-url=http://121.40.63.147:8081/avatar/default.jpg
+#info.avatar-base-url=http://localhost:8081/avatar/
+info.avatar-base-url=http://121.40.63.147:8081/avatar/
+#info.image-base-url=http://localhost:8081/image/
+info.image-base-url=http://121.40.63.147:8081/image/
 info.content-length=100
 info.recommend-count=100
